commit para vercel seguindo tutorial

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,18 @@
 {
     "features": {
       "directoryListing": true
-    }
+    },
+    "public" : true,
+    "build": {
+      "src":"index.js",
+      "use":"@vercel/node"
+
+    },
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
+    ]
   }
   
