--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "name": "new-tab-tool",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon ./src/index.js",
+    "web": "npm start"
   },
   "repository": {
     "type": "git",
