--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   },
   "name": "new-tab-tool",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "node server.js",
     "dev": "nodemon ./src/index.js",
     "web": "npm start"
   },
